src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__environment_definition_optional_arg.snap
---
source: src/syntax/latex/parser.rs
assertion_line: 1797
expression: "setup(r#\"\\newenvironment{foo}[1][default]{begin}{end}\"#)"
---
ROOT@0..44
  PREAMBLE@0..44
    ENVIRONMENT_DEFINITION@0..44
      ENVIRONMENT_DEFINITION_NAME@0..15 "\\newenvironment"
      CURLY_GROUP_WORD@15..20
        L_CURLY@15..16 "{"
        KEY@16..19
          WORD@16..19 "foo"
        R_CURLY@19..20 "}"
      BRACK_GROUP_WORD@20..23
        L_BRACK@20..21 "["
        KEY@21..22
          WORD@21..22 "1"
        R_BRACK@22..23 "]"
      BRACK_GROUP@23..32
        L_BRACK@23..24 "["
        TEXT@24..31
          WORD@24..31 "default"
        R_BRACK@31..32 "]"
      CURLY_GROUP@32..39
        L_CURLY@32..33 "{"
        TEXT@33..38
          WORD@33..38 "begin"
        R_CURLY@38..39 "}"
      CURLY_GROUP@39..44
        L_CURLY@39..40 "{"
        TEXT@40..43
          WORD@40..43 "end"
        R_CURLY@43..44 "}"

