src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__equation_label_reference_simple.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\\eqref{foo}\"#)"

---
ROOT@0..11
  PREAMBLE@0..11
    LABEL_REFERENCE@0..11
      LABEL_REFERENCE_NAME@0..6 "\\eqref"
      CURLY_GROUP_WORD_LIST@6..11
        L_CURLY@6..7 "{"
        WORD@7..10 "foo"
        R_CURLY@10..11 "}"

