src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__escaped_brackets.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"{[}{]}\"#)"

---
ROOT@0..6
  PREAMBLE@0..6
    CURLY_GROUP@0..6
      L_CURLY@0..1 "{"
      MIXED_GROUP@1..3
        L_BRACK@1..2 "["
        R_CURLY@2..3 "}"
      CURLY_GROUP@3..6
        L_CURLY@3..4 "{"
        ERROR@4..5
          R_BRACK@4..5 "]"
        R_CURLY@5..6 "}"
      MISSING@6..6 ""

