src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__generic_command_empty.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\\foo\"#)"

---
ROOT@0..4
  PREAMBLE@0..4
    GENERIC_COMMAND@0..4
      GENERIC_COMMAND_NAME@0..4 "\\foo"

