src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__generic_command_escape.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\\#\"#)"

---
ROOT@0..2
  PREAMBLE@0..2
    GENERIC_COMMAND@0..2
      GENERIC_COMMAND_NAME@0..2 "\\#"

