src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__glossary_entry_reference_options.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\\gls[foo = bar, qux]{baz}\"#)"

---
ROOT@0..25
  PREAMBLE@0..25
    GLOSSARY_ENTRY_REFERENCE@0..25
      GLOSSARY_ENTRY_REFERENCE_NAME@0..4 "\\gls"
      BRACK_GROUP_KEY_VALUE@4..20
        L_BRACK@4..5 "["
        KEY_VALUE_BODY@5..19
          KEY_VALUE_PAIR@5..14
            KEY@5..9
              WORD@5..8 "foo"
              WHITESPACE@8..9 " "
            EQUALITY_SIGN@9..10 "="
            WHITESPACE@10..11 " "
            VALUE@11..14
              TEXT@11..14
                WORD@11..14 "bar"
          COMMA@14..15 ","
          WHITESPACE@15..16 " "
          KEY_VALUE_PAIR@16..19
            KEY@16..19
              WORD@16..19 "qux"
        R_BRACK@19..20 "]"
      CURLY_GROUP_WORD@20..25
        L_CURLY@20..21 "{"
        WORD@21..24 "baz"
        R_CURLY@24..25 "}"

